--- a/1Lab/pom.xml
+++ b/1Lab/pom.xml
@@ -44,5 +44,15 @@
             <artifactId>logback-core</artifactId>
             <version>1.2.11</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <version>3.1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+            <version>3.1.5</version>
+        </dependency>
     </dependencies>
 </project>
